@@ -1,3 +1,4 @@
+* Show records names in wizard title
 * Add support for datetime_field to Many2One, Reference
 * Add calendar view
 * Move info-bar to the top
